--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,12 @@ form button {
   height: 100vh;
   display: grid;
   grid-template-columns: 300px auto;
-  grid-template-rows: 50px auto 50px;
+  grid-template-rows: 100px auto 50px;
+  background-color: #2D9CDB;
+/* background: -moz-linear-gradient(top, #1e5799 0%, #2989d8 53%, #207cca 100%, #7db9e8 100%); /* FF3.6-15 */
+/* background: -webkit-linear-gradient(top, #1e5799 0%,#2989d8 53%,#207cca 100%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
+/* background: linear-gradient(to bottom, #1e5799 0%,#2989d8 53%,#207cca 100%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
 }
 
 .Form {
@@ -55,18 +60,45 @@ form button {
   grid-column: 2/4;
   border-top: 1px solid grey;
 }
+
 .Users {
   grid-row: 1/4;
   grid-column: 1 / span 1;
-  border-right: 1px solid grey;
+  background-color:#2D9CDB;
+  /* border: 4px solid rgb(255, 255, 255);   */
+  padding: 15px 0px 0px 20px;
+  margin: 30px 30px 0px 30px;
 }
+
 .TopBar {
   grid-row: 1/2;
   grid-column: 2 / span 2;
-  border-bottom: 1px solid grey;
+  /* border: 4px solid rgb(255, 255, 255);   */
+  border-radius: 8px;
+  background-color:#81CDF8;
+  color: rgb(70, 70, 70);
+  padding: 15px 0px 0px 20px;
+  margin: 30px 30px 0px 0px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 .List {
   grid-row: 2/3;
   grid-column: 2/4;
   /* border: 1px solid grey; */
+}
+
+.users{
+  grid-row: 3/4;
+  grid-column: 1/2;
+  background-color:rgb(255, 255, 255);
+  color: rgb(70, 70, 70);
+  border-radius: 8px;
+  padding: 10px 0px 10px 20px;
+  margin: 15px 0px 10px 30px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.users:first-child{
+  background-color:#81CDF8;
 }
