--- a/src/App.css
+++ b/src/App.css
@@ -48,11 +48,7 @@ form button {
   display: grid;
   grid-template-columns: 300px auto;
   grid-template-rows: 100px auto 50px;
-  background-color: #2D9CDB;
-/* background: -moz-linear-gradient(top, #1e5799 0%, #2989d8 53%, #207cca 100%, #7db9e8 100%); /* FF3.6-15 */
-/* background: -webkit-linear-gradient(top, #1e5799 0%,#2989d8 53%,#207cca 100%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
-/* background: linear-gradient(to bottom, #1e5799 0%,#2989d8 53%,#207cca 100%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-
+  background-color:rgb(0, 154, 181);
 }
 
 .Form {
@@ -64,10 +60,9 @@ form button {
 .Users {
   grid-row: 1/4;
   grid-column: 1 / span 1;
-  background-color:#2D9CDB;
   /* border: 4px solid rgb(255, 255, 255);   */
   padding: 15px 0px 0px 20px;
-  margin: 30px 30px 0px 30px;
+  margin: 30px 30px 0px 0px;
 }
 
 .TopBar {
@@ -89,16 +84,27 @@ form button {
 }
 
 .users{
+  height: 50px;
   grid-row: 3/4;
-  grid-column: 1/2;
+  grid-column: 2/3;
   background-color:rgb(255, 255, 255);
   color: rgb(70, 70, 70);
   border-radius: 8px;
-  padding: 10px 0px 10px 20px;
-  margin: 15px 0px 10px 30px;
+  padding: 10px 0px 10px 10px;
+  margin: 10px 0px 10px 30px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .users:first-child{
   background-color:#81CDF8;
+}
+
+.fotoUser{
+  width: 30px;
+  height: 30px;
+  float: left;
+  background-color:#ADADAD;
+  border-radius: 8px;
+  margin-right:10px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
