--- a/src/App.css
+++ b/src/App.css
@@ -28,18 +28,15 @@ form button {
   padding: 10px;
 }
 
-#messages {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
 
-#messages li {
+.messaggio {
+  width: fit-content;
   padding: 5px 10px;
-}
-
-#messages li:nth-child(odd) {
-  background: #eee;
+  background-color: rgb(187, 187, 187);
+  margin: 10px 20px 10px 0px;
+  color: rgb(70, 70, 70);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  border-radius: 8px;;
 }
 
 .App {
@@ -68,6 +65,7 @@ form button {
 .TopBar {
   grid-row: 1/2;
   grid-column: 2 / span 2;
+  z-index: 100;
   /* border: 4px solid rgb(255, 255, 255);   */
   border-radius: 8px;
   background-color:#81CDF8;
@@ -78,8 +76,15 @@ form button {
 }
 
 .List {
+  overflow-y: auto; 
   grid-row: 2/3;
-  grid-column: 2/4;
+  grid-column: 2/4; 
+  background-color:rgb(255, 255, 255);
+  color: rgb(70, 70, 70);
+  border-radius: 0px 0px 0px 0px;
+  padding: 10px 0px 0px 20px;
+  margin: -5px 30px 0px 0px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   /* border: 1px solid grey; */
 }
 
