--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,6 @@ form button {
   padding: 10px;
 }
 
-
 .messaggio {
   width: fit-content;
   padding: 5px 10px;
@@ -36,7 +35,7 @@ form button {
   margin: 10px 20px 10px 0px;
   color: rgb(70, 70, 70);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  border-radius: 8px;;
+  border-radius: 8px;
 }
 
 .App {
@@ -45,7 +44,7 @@ form button {
   display: grid;
   grid-template-columns: 300px auto;
   grid-template-rows: 100px auto 50px;
-  background-color:rgb(0, 154, 181);
+  background-color: rgb(0, 154, 181);
 }
 
 .Form {
@@ -68,7 +67,7 @@ form button {
   z-index: 100;
   /* border: 4px solid rgb(255, 255, 255);   */
   border-radius: 8px;
-  background-color:#81CDF8;
+  background-color: #81cdf8;
   color: rgb(70, 70, 70);
   padding: 15px 0px 0px 20px;
   margin: 30px 30px 0px 0px;
@@ -76,10 +75,10 @@ form button {
 }
 
 .List {
-  overflow-y: auto; 
+  overflow-y: auto;
   grid-row: 2/3;
-  grid-column: 2/4; 
-  background-color:rgb(255, 255, 255);
+  grid-column: 2/4;
+  background-color: rgb(255, 255, 255);
   color: rgb(70, 70, 70);
   border-radius: 0px 0px 0px 0px;
   padding: 10px 0px 0px 20px;
@@ -88,11 +87,11 @@ form button {
   /* border: 1px solid grey; */
 }
 
-.users{
+.users {
   height: 50px;
   grid-row: 3/4;
   grid-column: 2/3;
-  background-color:rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255);
   color: rgb(70, 70, 70);
   border-radius: 8px;
   padding: 10px 0px 10px 10px;
@@ -100,16 +99,16 @@ form button {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.users:first-child{
-  background-color:#81CDF8;
+.users:first-child {
+  background-color: #81cdf8;
 }
 
-.fotoUser{
+.fotoUser {
   width: 30px;
   height: 30px;
   float: left;
-  background-color:#ADADAD;
+  background-color: #adadad;
   border-radius: 8px;
-  margin-right:10px;
+  margin-right: 10px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
