--- a/src/App.css
+++ b/src/App.css
@@ -9,107 +9,148 @@ body {
 }
 
 form {
-  background: grey;
   padding: 10px;
+  background-color: rgb(245, 245, 245);
   width: 100%;
 }
 
 form input {
-  border: 0;
+  border: 1px solid rgb(187, 187, 187);
   padding: 10px;
   width: 90%;
   margin-right: 0.5%;
+  margin-bottom: 10px;
+  border-radius: 8px;
+}
+
+form input:focus {
+  border: 1px solid rgb(145, 145, 145);
+  outline: none;
 }
 
 form button {
   width: 9%;
-  background: rgb(130, 224, 255);
-  border: none;
+  border: 1px solid rgb(187, 187, 187);
   padding: 10px;
+  border-radius: 8px;
 }
 
+form button:focus {
+  border: 1px solid rgb(145, 145, 145);
+  outline: none;
+}
 
 .messaggio {
   width: fit-content;
   padding: 5px 10px;
-  background-color: rgb(187, 187, 187);
+  list-style: none;
+  background-color: rgb(224, 224, 224);
   margin: 10px 20px 10px 0px;
   color: rgb(70, 70, 70);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  border-radius: 8px;;
+  border-radius: 8px;
 }
 
 .App {
   width: 100%;
   height: 100vh;
-  display: grid;
-  grid-template-columns: 300px auto;
-  grid-template-rows: 100px auto 50px;
-  background-color:rgb(0, 154, 181);
+  /* padding: 30px; */
+  background-color: rgb(0, 154, 181);
 }
 
+.wrapper {
+  display: grid;
+  height: 100vh;
+  width: 100%;
+  border-radius: 8px;
+  margin: 0 auto;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+  background-color: #636e72;
+  grid-template-columns: 250px auto 300px;
+  grid-template-rows: 80px auto 60px;
+}
+
+i {
+  color: #636e72;
+  font-size: 30px;
+  margin-right: 30px;
+}
 .Form {
-  grid-row: 3/4;
-  grid-column: 2/4;
-  border-top: 1px solid grey;
+  grid-row: 3/3;
+  grid-column: 2/3;
+}
+
+.TodoList {
+  grid-row: 1/4;
+  grid-column: 3/4;
+  padding: 45px 30px 0px 40px;
+  color: #636e72;
+  background-color: #dfe6e9 !important;
 }
 
 .Users {
   grid-row: 1/4;
   grid-column: 1 / span 1;
   /* border: 4px solid rgb(255, 255, 255);   */
-  padding: 15px 0px 0px 20px;
+  padding: 15px 0px 0px 40px;
   margin: 30px 30px 0px 0px;
+  display: flex;
+  flex-direction: column;
 }
 
+.User {
+  margin-bottom: 100px;
+}
 .TopBar {
   grid-row: 1/2;
-  grid-column: 2 / span 2;
+  grid-column: 2 /3;
   z-index: 100;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   /* border: 4px solid rgb(255, 255, 255);   */
-  border-radius: 8px;
-  background-color:#81CDF8;
-  color: rgb(70, 70, 70);
+
+  border-bottom: 1px solid #636e72;
+  color: #636e72;
+  background-color: rgb(245, 245, 245);
   padding: 15px 0px 0px 20px;
-  margin: 30px 30px 0px 0px;
+  margin: 0px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .List {
-  overflow-y: auto; 
+  overflow-y: auto;
   grid-row: 2/3;
-  grid-column: 2/4; 
-  background-color:rgb(255, 255, 255);
-  color: rgb(70, 70, 70);
-  border-radius: 0px 0px 0px 0px;
-  padding: 10px 0px 0px 20px;
-  margin: -5px 30px 0px 0px;
+  grid-column: 2/3;
+  background-color: rgb(245, 245, 245);
+  color: #636e72;
+  padding: 10px 0px 0px 40px;
+  margin: 0px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   /* border: 1px solid grey; */
 }
 
-.users{
+.users {
   height: 50px;
-  grid-row: 3/4;
-  grid-column: 2/3;
-  background-color:rgb(255, 255, 255);
-  color: rgb(70, 70, 70);
+  /* grid-row: 3/4;
+  grid-column: 2/3; */
+  color: white;
+  display: flex;
+  align-items: center;
   border-radius: 8px;
-  padding: 10px 0px 10px 10px;
-  margin: 10px 0px 10px 30px;
+  padding: 10px 0px 10px 0px;
+  margin: 10px 0px 10px 0px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.users:first-child{
-  background-color:#81CDF8;
+.users:first-child {
 }
 
-.fotoUser{
+.fotoUser {
   width: 30px;
   height: 30px;
-  float: left;
-  background-color:#ADADAD;
+  background-color: #adadad;
   border-radius: 8px;
-  margin-right:10px;
+  margin-right: 10px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
