--- a/src/App.css
+++ b/src/App.css
@@ -131,16 +131,25 @@ i {
 }
 
 .users {
-  height: 50px;
   /* grid-row: 3/4;
   grid-column: 2/3; */
+  height: 200px;
+  overflow-y: auto;
   color: white;
-  display: flex;
   align-items: center;
+  list-style: none;
   border-radius: 8px;
   padding: 10px 0px 10px 0px;
   margin: 10px 0px 10px 0px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.usersList {
+  display: flex;
+  align-items: center;
+}
+.usersList div {
+  display: inline-block;
+  margin: 10px;
 }
 
 .users:first-child {
@@ -153,4 +162,12 @@ i {
   border-radius: 8px;
   margin-right: 10px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.RoomTitle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.RoomTitle i {
+  font-size: 20px;
 }
