--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 * {
   margin: 0;
   padding: 0;
@@ -5,7 +7,7 @@
 }
 
 body {
-  font: 13px Helvetica, Arial;
+  font: 13px 'Montserrat', sans-serif;
 }
 
 form {
@@ -15,22 +17,22 @@ form {
 }
 
 form input {
-  border: 1px solid rgb(187, 187, 187);
+  border: 1px solid #004562;
   padding: 10px;
   width: 90%;
   margin-right: 0.5%;
   margin-bottom: 10px;
-  border-radius: 8px;
+  border-radius: 8px 8px 8px 0px;
 }
 
 form input:focus {
-  border: 1px solid rgb(145, 145, 145);
+  border: 1px solid #004562;
   outline: none;
 }
 
 form button {
   width: 9%;
-  border: 1px solid rgb(187, 187, 187);
+  border: 1px solid #004562;
   padding: 10px;
   border-radius: 8px;
 }
@@ -46,9 +48,9 @@ form button:focus {
   list-style: none;
   background-color: rgb(224, 224, 224);
   margin: 10px 20px 10px 0px;
-  color: rgb(70, 70, 70);
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  border-radius: 8px;
+  color: #004562;
+  font-family: 'Montserrat', sans-serif;
+  border-radius: 8px 8px 8px 0px;
 }
 
 .App {
@@ -65,13 +67,13 @@ form button:focus {
   border-radius: 8px;
   margin: 0 auto;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
-  background-color: #636e72;
+  background-color: #409d9b;
   grid-template-columns: 250px auto 300px;
   grid-template-rows: 80px auto 60px;
 }
 
 i {
-  color: #636e72;
+  color: #ffffff;
   font-size: 30px;
   margin-right: 30px;
 }
@@ -84,8 +86,8 @@ i {
   grid-row: 1/4;
   grid-column: 3/4;
   padding: 45px 30px 0px 40px;
-  color: #636e72;
-  background-color: #dfe6e9 !important;
+  color: #fff;
+  background-color: #00a29d !important;
 }
 
 .Users {
@@ -110,64 +112,72 @@ i {
   align-items: center;
   /* border: 4px solid rgb(255, 255, 255);   */
 
-  border-bottom: 1px solid #636e72;
-  color: #636e72;
-  background-color: rgb(245, 245, 245);
+  /* border-bottom: 1px solid #636e72; */
+  color: #ffffff;
+  background-color: #034561;
   padding: 15px 0px 0px 20px;
   margin: 0px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .List {
+  overflow-wrap: break-word;
   overflow-y: auto;
   grid-row: 2/3;
   grid-column: 2/3;
   background-color: rgb(245, 245, 245);
   color: #636e72;
-  padding: 10px 0px 0px 40px;
+  padding: 10px 20px 0px 40px;
   margin: 0px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   /* border: 1px solid grey; */
+  /* border-radius: 0px 0px 8px 8px; */
 }
 
 .users {
+  height: 50px;
   /* grid-row: 3/4;
   grid-column: 2/3; */
-  height: 200px;
-  overflow-y: auto;
   color: white;
+  display: flex;
   align-items: center;
-  list-style: none;
   border-radius: 8px;
   padding: 10px 0px 10px 0px;
   margin: 10px 0px 10px 0px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.usersList {
-  display: flex;
-  align-items: center;
-}
-.usersList div {
-  display: inline-block;
-  margin: 10px;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.users:first-child {
-}
 
 .fotoUser {
   width: 30px;
   height: 30px;
   background-color: #adadad;
-  border-radius: 8px;
+  border-radius: 8px 8px 8px 0px;
   margin-right: 10px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+  font: 25px 'Montserrat', sans-serif; 
+  text-transform: capitalize;
 }
-.RoomTitle {
+
+.fotoRoom {
+  width: 30px;
+  height: 30px;
+  background-color: #adadad;
+  border-radius: 8px 8px 8px 0px;
+  margin-right: 10px;
+  text-align: center;
+  font: 24px 'Montserrat', sans-serif; 
+  text-transform: capitalize;
+}
+
+.room{
+  color: white;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  padding: 10px 0px 10px 0px;
+  margin: 10px 0px 10px 0px;
+  font: 14px 'Montserrat', sans-serif;
+  border: 10px;
 }
-.RoomTitle i {
-  font-size: 20px;
-}
+
+
