--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +5,9 @@
 }
 
 body {
-  font: 13px 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 13px;
+  font-weight: 400;
 }
 
 form {
@@ -22,14 +22,17 @@ form input {
   width: 90%;
   margin-right: 0.5%;
   margin-bottom: 10px;
-  border-radius: 8px 8px 8px 0px;
+  border-radius: 8px 8px 8px 8px;
 }
 
 form input:focus {
   border: 1px solid #004562;
   outline: none;
 }
-
+h1 {
+  font-weight: lighter;
+  text-transform: uppercase;
+}
 form button {
   width: 9%;
   border: 1px solid #004562;
@@ -45,7 +48,10 @@ form button:focus {
 .messaggio {
   width: fit-content;
   padding: 5px 10px;
+  display: flex;
+  flex-direction: column;
   list-style: none;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
   background-color: rgb(224, 224, 224);
   margin: 10px 20px 10px 0px;
   color: #004562;
@@ -69,7 +75,7 @@ form button:focus {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
   background-color: #409d9b;
   grid-template-columns: 250px auto 300px;
-  grid-template-rows: 80px auto 60px;
+  grid-template-rows: 130px auto 60px;
 }
 
 i {
@@ -85,8 +91,10 @@ i {
 .TodoList {
   grid-row: 1/4;
   grid-column: 3/4;
-  padding: 45px 30px 0px 40px;
-  color: #fff;
+  padding: 73px 30px 0px 40px;
+  color: white;
+  font-family: 'Montserrat';
+  font-weight: 400;
   background-color: #00a29d !important;
 }
 
@@ -95,7 +103,7 @@ i {
   grid-column: 1 / span 1;
   /* border: 4px solid rgb(255, 255, 255);   */
   padding: 15px 0px 0px 40px;
-  margin: 30px 30px 0px 0px;
+  margin: 50px 30px 0px 0px;
   display: flex;
   flex-direction: column;
 }
@@ -110,11 +118,12 @@ i {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
   /* border: 4px solid rgb(255, 255, 255);   */
 
   /* border-bottom: 1px solid #636e72; */
   color: #ffffff;
-  background-color: #034561;
+  background-color: #006f7e;
   padding: 15px 0px 0px 20px;
   margin: 0px;
   font-family: 'Montserrat', sans-serif;
@@ -186,6 +195,8 @@ i {
 .RoomTitle {
   display: flex;
   justify-content: space-between;
+  margin-top: 20px;
+  margin-bottom: 15px;
 }
 .RoomTitle i {
   font-size: 20px;
@@ -204,8 +215,48 @@ small {
   color: #adadad;
   display: block;
   font-weight: lighter;
+  margin-left: '10px';
+  margin-right: '2px';
 }
 
 .online {
-  background-color: red;
+  background-color: #0045628a;
+  border-radius: 8px;
+}
+
+.inviaLogin {
+  background-color: transparent;
+  border: 1px solid rgb(230, 230, 230);
+  color: #034561;
+  font: 13px 'Montserrat', sans-serif;
+}
+
+.inviaLogin:focus {
+  background-color: rgb(230, 230, 230);
+  border: 1px solid rgb(230, 230, 230);
+  color: #034561;
+  font: 12px 'Montserrat', sans-serif;
+}
+
+.formRooms {
+  background-color: transparent;
+}
+.inputRooms {
+  background-color: transparent;
+  border-color: #034561;
+  font: 13px 'Montserrat', sans-serif;
+}
+
+.inputRooms:focus {
+  background-color: transparent;
+  border-color: white;
+  color: #034561;
+  font: 13px 'Montserrat', sans-serif;
+}
+
+.notme {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
 }
