--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@ i {
   margin-right: 30px;
 }
 .Form {
-  grid-row: 3/3;
+  grid-row: 3/4;
   grid-column: 2/3;
 }
 
@@ -99,7 +99,7 @@ i {
 }
 
 .Users {
-  grid-row: 1/4;
+  grid-row: 1/3;
   grid-column: 1 / span 1;
   /* border: 4px solid rgb(255, 255, 255);   */
   padding: 15px 0px 0px 40px;
@@ -132,7 +132,7 @@ i {
 .List {
   overflow-wrap: break-word;
   overflow-y: auto;
-  grid-row: 2/3;
+  grid-row: 2/4;
   grid-column: 2/3;
   background-color: rgb(245, 245, 245);
   color: #636e72;
@@ -182,7 +182,6 @@ i {
   text-transform: capitalize;
 }
 .RoomsGroup {
-  height: 200px;
   overflow-y: auto;
 }
 .room {
@@ -199,10 +198,12 @@ i {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
-  margin-bottom: 15px;
+  margin-bottom: 0px;
 }
 .RoomTitle i {
-  font-size: 20px;
+  font-size: 18px;
+  margin: 0;
+  padding: 0px 5px 0px 10px;
 }
 
 .usersList {
@@ -225,12 +226,15 @@ small {
 .online {
   background-color: #0045628a;
   border-radius: 8px;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: auto;
 }
 
 .inviaLogin {
   background-color: transparent;
   border: 1px solid rgb(230, 230, 230);
-  color: #034561;
+  color: rgb(230, 230, 230);
   font: 13px 'Montserrat', sans-serif;
 }
 
@@ -243,16 +247,40 @@ small {
 
 .formRooms {
   background-color: transparent;
+  width: 100%;
+  max-height: 30px;
+  display: flex;
+}
+.formRooms i {
+  font-size: 18px;
+  right: 0;
+  padding: 0;
+}
+.formRooms form {
+  margin-right: 18px;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+.formRooms input {
+  width: 100%;
+  margin: 0;
 }
 .inputRooms {
   background-color: transparent;
-  border-color: #034561;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid white;
+  color: #034561;
   font: 13px 'Montserrat', sans-serif;
 }
 
 .inputRooms:focus {
   background-color: transparent;
-  border-color: white;
+  border-radius: 0;
+  border: none;
+  border-bottom: 1px solid #034561;
   color: #034561;
   font: 13px 'Montserrat', sans-serif;
 }
@@ -262,4 +290,14 @@ small {
   flex-direction: column;
   background-color: white;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+.usersTitle {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  height: 30px;
+}
+.usersTitle i {
+  font-size: 18px;
 }
