--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body {
 }
 
 form {
+  z-index: 1;
   padding: 10px;
   background-color: rgb(245, 245, 245);
   width: 100%;
@@ -95,11 +96,12 @@ i {
   color: white;
   font-family: 'Montserrat';
   font-weight: 400;
-  background-color: #00a29d !important;
+  background-color: #adadad !important;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
 .Users {
-  grid-row: 1/3;
+  grid-row: 1/4;
   grid-column: 1 / span 1;
   /* border: 4px solid rgb(255, 255, 255);   */
   padding: 15px 0px 0px 40px;
@@ -136,9 +138,10 @@ i {
   grid-column: 2/3;
   background-color: rgb(245, 245, 245);
   color: #636e72;
-  padding: 10px 20px 0px 40px;
+  padding: 10px 20px 50px 40px;
   margin: 0px;
   font-family: 'Montserrat', sans-serif;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
   /* border: 1px solid grey; */
   /* border-radius: 0px 0px 8px 8px; */
 }
@@ -151,17 +154,18 @@ i {
   list-style: none;
   align-items: center;
   overflow-y: auto;
-  border-radius: 8px;
+
   padding: 10px 0px 10px 0px;
   margin: 10px 0px 10px 0px;
   font-family: 'Montserrat', sans-serif;
 }
 
 .fotoUser {
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
   display: flex;
   align-items: center;
+  justify-content: center;
   background-color: #adadad;
   border-radius: 8px 8px 8px 8px;
   margin-right: 10px;
@@ -183,12 +187,15 @@ i {
 }
 .RoomsGroup {
   overflow-y: auto;
+  height: 190px;
+  margin-top: 20px;
+  margin-bottom: 0;
 }
 .room {
   color: white;
   display: flex;
   padding: 10px 0px 10px 0px;
-  margin: 10px 0px 10px 0px;
+  margin: 0px 0px 10px 0px;
   align-items: center;
   font: 14px 'Montserrat', sans-serif;
   border: 10px;
@@ -209,6 +216,8 @@ i {
 .usersList {
   display: flex;
   align-items: center;
+
+  margin-bottom: 5px;
 }
 .usersList div {
   display: inline-block;
@@ -225,10 +234,10 @@ small {
 
 .online {
   background-color: #0045628a;
-  border-radius: 8px;
+  /* border-radius: 8px; */
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: auto;
+  grid-template-rows: 50px;
 }
 
 .inviaLogin {
@@ -300,4 +309,34 @@ small {
 }
 .usersTitle i {
   font-size: 18px;
+}
+
+.formRooms {
+  background-color: transparent;
+}
+.inputRooms {
+  background-color: transparent;
+  border-color: #034561;
+  font: 13px 'Montserrat', sans-serif;
+}
+
+.inputRooms:focus {
+  background-color: transparent;
+  border-color: white;
+  color: #034561;
+  font: 13px 'Montserrat', sans-serif;
+}
+
+.notme {
+  margin-left: auto;
+  margin-right: 0;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+}
+
+.offline {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 50px;
 }
